--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-bool-checkbox-2.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-bool-checkbox-2.html
@@ -1,12 +1,12 @@
 {% import 'macros/markup_helpers.html' as markup_helpers -%}
 
-<div class="control-group{{ " error" if errors }}{{ " " ~ classes | join(' ') }}">
+<div class="control-group{{ "error" if errors }}{{ " " ~ classes|join(' ') }}">
     <div class="controls">
         <label class="checkbox">
             <input type="checkbox" name="{{ qname }}" id="input-{{ qname }}" value="{{ qname }}"
-                class="{{ input_classes | list | join(" ") }}"
+                class="{{ input_classes|join(" ") }}"
                 {% if value %}checked="checked"{% endif -%}
-                {{ attrs | xmlattr }} />
+                {{ attrs|xmlattr }} />
              <span>{{ description }}</span>
          </label>
     </div>
