--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-list-choices.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-list-choices.html
@@ -8,13 +8,15 @@
     <label class="control-label" for="{{ 'input-' ~ qname }}">
         {{- title }}{{ markup_helpers.mark_required(required) }}</label>
     <div class="controls">
-        <select name="{{ qname }}" id="{{ 'input-' ~ qname }}" 
-            class="{{ ' ' ~ input_classes|join(' ') }}" {{ attrs|xmlattr }}>
+        <select multiple="multiple" size="{{ size|default('5') }}" name="{{ qname }}" id="{{ 'input-' ~ qname }}" 
+            class="{{ ' ' ~ input_classes|join(' ') }}" 
+            {{ attrs|xmlattr -}}
+          >
             {%- if not required -%}
             <option value=""></option>
             {%- endif %}
-            {% for option in field.vocabulary -%}
-            <option value="{{ option.value }}" {% if option.value == value %}selected="selected"{% endif -%}
+            {% for option in field.value_type.vocabulary -%}
+            <option value="{{ option.value }}" {% if option.value in value %}selected="selected"{% endif -%}
                 >{{- option.title or option.value -}}</option>
             {% endfor -%}
         </select>
