--- a/ckanext/publicamundi/templates/package/snippets/objects/glue-edit-inspire-datasetform.html
+++ b/ckanext/publicamundi/templates/package/snippets/objects/glue-edit-inspire-datasetform.html
@@ -77,13 +77,12 @@
             'name': 'identification',
             'heading': _('Identification'),
             'fields': [
-                'identifier', 'title', 'abstract', 
-                'locator', 'resource_language'],
+                'identifier', 'title', 'abstract', 'locator', 'resource_language'],
         },
         { 
             'name': 'classification',
             'heading': _('Classification'),
-            'fields': [],
+            'fields': ['topic_category'],
         },
         { 
             'name': 'keywords',
