Created widgets for thesaurus terms

--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-dict-selected-items.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-dict-selected-items.html
@@ -6,7 +6,8 @@
     data-module-terms="{{ h.dump_json(terms) }}"
     data-module-messages="{{ h.dump_json(messages) }}"
     data-module-select="select"
-   >
+    data-module-select-class="span4"
+ >
     {% if title %}<h3 class="title">{{ title }}</h3>{% endif -%}
     {%- if description %}<div class="description">{{ description }}</div>{% endif -%}
 
