--- a/ckanext/publicamundi/templates/tests/field.html
+++ b/ckanext/publicamundi/templates/tests/field.html
@@ -10,11 +10,15 @@
 
 {% block primary_content_inner %}
 <form method="post" class="form form-horizontal">
+    {% if helper %}
     {{ 
         h.markup_for_field(action|default('edit'), field, 
             name_prefix = name_prefix, 
             data = { 'title': title|default('A title goes here') }) 
     }}
+    {% else %}
+    {{ field_markup }}
+    {% endif %}
     <hr/>
     <button type="submit" name="submit" class="btn btn-primary" >Submit</button>
 </form>
