--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-dict-thesaurus_terms.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-dict-thesaurus_terms.html
@@ -5,4 +5,8 @@
         'add-label': 'Add',
     } 
 -%}
-{% extends 'package/snippets/fields/edit-dict-selected-items.html' %}
+{%- set
+    select_control = 'select'
+-%}
+
+{%- extends 'package/snippets/fields/edit-dict-selected-items.html' %}
