--- a/ckanext/publicamundi/templates/package/snippets/objects/glue-edit-inspire-datasetform.html
+++ b/ckanext/publicamundi/templates/package/snippets/objects/glue-edit-inspire-datasetform.html
@@ -87,7 +87,7 @@
         { 
             'name': 'keywords',
             'heading': _('Keywords'),
-            'fields': [],
+            'fields': ['keywords'],
         },
         { 
             'name': 'geographic',
