Fixed bug with empty linked fields (creation, 3rd stage)

--- a/ckanext/publicamundi/public/css/main.css
+++ b/ckanext/publicamundi/public/css/main.css
@@ -7,6 +7,10 @@ header > h6.inline {
     display: inline-block 
 } 
 
+.btn {
+    font-weight: normal;
+}
+
 .popover {
     width: inherit;
     max-width: 400px;
