--- a/ckanext/publicamundi/templates/package/snippets/fields/read-object.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/read-object.html
@@ -2,6 +2,6 @@
 
 <div class="{{ classes|join(' ') }}" {{ attrs|xmlattr }} >
     {%- if title  %}<h3 class="title">{{ title }}</h3>{% endif -%}
-    {%- if description %}<div class="description">{{ description }}</div>{% endif -%}
+    {%- if description %}<p class="description">{{ description }}</p>{% endif -%}
     {{ content.markup }}
 </div>
