--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-dict-selected-items.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-dict-selected-items.html
@@ -1,4 +1,5 @@
 {% if messages is not defined %}{% set messages = {} -%}{% endif -%}
+{% if list_classes is not defined %}{% set list_classes = ['unstyled'] -%}{% endif -%}
 
 <div class="{{ classes|join(' ') }}"
     data-module="edit-selected-dict-items" 
@@ -9,13 +10,13 @@
     data-module-select-class="{{ select_class|default('span4') }}"
  >
     {% if title %}<h3 class="title">{{ title }}</h3>{% endif -%}
-    {%- if description %}<div class="description">{{ description }}</div>{% endif -%}
+    {%- if description %}<p class="description">{{ description }}</p>{% endif -%}
 
     <script type="x-template-mustache" id="{{ qname }}-item-template">
         {{ item_template.markup|safe }}
     </script>
 
-    <ul id="{{ qname }}-items">
+    <ul id="{{ qname }}-items" class="{{ list_classes|join(' ') }}">
         {% for k, y in items.items() -%}
         <li data-key="{{ k }}">{{ y.markup }}</li>
         {%- endfor %}
