--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-list-items.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-list-items.html
@@ -1,4 +1,5 @@
 {% if messages is not defined %}{% set messages = {} -%}{% endif -%}
+{% if list_classes is not defined %}{% set list_classes = ['unstyled'] -%}{% endif -%}
 
 <div class="{{ classes|join(' ') }}"
     data-module="edit-list-items" 
@@ -7,13 +8,13 @@
     data-module-messages="{{ h.dump_json(messages) }}"
    >
     {% if title %}<h3 class="title">{{ title }}</h3>{% endif -%}
-    {%- if description %}<div class="description">{{ description }}</div>{% endif -%}
+    {%- if description %}<p class="description">{{ description }}</p>{% endif -%}
 
     <script type="x-template-mustache" id="{{ qname }}-item-template">
         {{ item_template.markup|safe }}
     </script>
 
-    <ol id="{{ qname }}-items">
+    <ol id="{{ qname }}-items" class="{{ list_classes|join(' ') }}">
         {% for y in items -%}
         <li data-index="{{ loop.index0 }}">{{ y.markup }}</li>
         {%- endfor %}
