--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-object.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-object.html
@@ -1,5 +1,5 @@
 <div class="{{ classes|join(' ') }}">
     {%- if title %}<h3 class="title">{{ title }}</h3>{% endif -%}
-    {%- if description %}<div class="description">{{ description }}</div>{% endif -%}
+    {%- if description %}<p class="description">{{ description }}</p>{% endif -%}
     {{ content.markup }}
 </div>
