--- a/ckanext/publicamundi/templates/package/snippets/fields/read-dict.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/read-dict.html
@@ -2,7 +2,7 @@
 
 <div class="{{ classes|join(' ') }}" {{ attrs|xmlattr }} >
     {% if title %}<h3 class="title">{{ title }}</h3>{% endif -%}
-    {%- if description %}<div class="description">{{ description }}</div>{% endif %}
+    {%- if description %}<p class="description">{{ description }}</p>{% endif %}
     <ul id="{{ qname }}-items">
         {% for k, y in items.items() -%}
         <li data-key="{{ k }}">{{ y.markup }}</li>
