--- a/ckanext/publicamundi/templates/package/snippets/objects/glue-edit-inspire-datasetform.html
+++ b/ckanext/publicamundi/templates/package/snippets/objects/glue-edit-inspire-datasetform.html
@@ -65,7 +65,7 @@
                         'rows': 4,
                         'data-module': 'package-form-linked-fields',
                         'data-module-target': h.dump_json({
-                            'name': 'title',
+                            'name': 'notes',
                             'value': pkg_dict.notes,
                             'title': 'description', })}}),
         },
