Added bounding-box to INSPIRE dataset forms (no leaflet helper)

--- a/ckanext/publicamundi/public/css/main.css
+++ b/ckanext/publicamundi/public/css/main.css
@@ -172,9 +172,9 @@ textarea:disabled {
     margin-top: inherit;
 }
 
-.form-horizontal .controls input + .input-separator-x1 { padding: 0px 4px }
-.form-horizontal .controls input + .input-separator-x2 { padding: 0px 8px }
-.form-horizontal .controls input + .input-separator-x3 { padding: 0px 12px }
+.space-x1 { padding: 0px 4px }
+.space-x2 { padding: 0px 8px }
+.space-x3 { padding: 0px 12px }
 
 .tag {
     border-radius: 2px;
