--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-list-temporal_extent-inspire.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-list-temporal_extent-inspire.html
@@ -1,13 +1,13 @@
 {%- set 
     messages = 
     {
-        'add-label': 'Add extent',
-        'add-title': 'Add extent', 
-        'clear-label': 'Clear all',
-        'clear-title': 'Clear all extents!',
-        'add-description': none,
-        'maxlength-alert': 'You cannot add more than {{maxlength}} extents',
-        'clear-alert': 'Are you sure you want to clear all ({{num}}) extents ?',
+        'add-label': _('Add extent'),
+        'add-title': _('Add extent'), 
+        'clear-label': _('Clear all'),
+        'clear-title': _('Clear all extents!'),
+        'add-description': false,
+        'maxlength-alert': _('You cannot add more than {{maxlength}} extents'),
+        'clear-alert': _('Are you sure you want to clear all ({{num}}) extents ?'),
     } 
 -%}
 
