Fixed readonly inputs (dataset form) for linked fields

--- a/ckanext/publicamundi/public/css/main.css
+++ b/ckanext/publicamundi/public/css/main.css
@@ -132,8 +132,7 @@ input[type='checkbox'], input[type='radio'] {
     border-radius: 1px;
 }
 
-input:disabled,
-textarea:disabled {
+input:disabled, textarea:disabled {
     cursor: text;
 }
 
