--- a/ckanext/publicamundi/templates/package/snippets/objects/glue-edit-inspire-datasetform.html
+++ b/ckanext/publicamundi/templates/package/snippets/objects/glue-edit-inspire-datasetform.html
@@ -145,6 +145,9 @@
             'subgroups': [
                 {
                     'fields': ['lineage'],
+                },
+                {
+                    'fields': ['spatial_resolution'],
                 }
             ]
         },
