--- a/ckanext/publicamundi/templates/package/snippets/package_metadata_fields.html
+++ b/ckanext/publicamundi/templates/package/snippets/package_metadata_fields.html
@@ -1,7 +1,7 @@
 {% import 'macros/form.html' as form %}
 
 {% block package_metadata_fields %}
-
+{{ errors }}
 {% block package_metadata_fields_url %}
 {{ 
     form.input('url', 
