--- a/ckanext/publicamundi/templates/package/upload_template.html
+++ b/ckanext/publicamundi/templates/package/upload_template.html
@@ -1,11 +1,15 @@
-{% extends 'page.html' %}
+{% extends "package/base_form_page.html" %}
 
-{% block primary_content_inner %}
-<form action="submit_upload" method="post"
-    enctype="multipart/form-data">
-    <label for="file">Filename</label>
-    <input type="file" name="filename" id="filename"><br>
-    <input type="submit" name="submit" value="Submit">
-</form>
+{% set errors = errors or {} %}
+
+{% block subtitle %}{{ _('Upload metadata from XML file') }}{% endblock %}
+{{errors}}
+
+{% block primary_content_inner %}{% snippet 'package/snippets/xml_upload_form.html', data=data, errors=errors, error_summary=error_summary, include_metadata=false, pkg_name=pkg_name, stage=stage, allow_upload=g.ofs_impl and logged_in %}{% endblock %}
+
+
+
+{% block scripts %}
+  {{ super() }}
+  {% resource 'vendor/fileupload' %}
 {% endblock %}
-
